--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,20 @@
 .movie-title {
-  margin-top: 10px;
+  margin-top: 15px;
   font-weight: bold;
+  width: 100%;
 }
 .movie-title span {
-  font-weight: 500;
+  font-weight: lighter;
   display: block;
+  color: #c7c7c7;
 }
 
 .movie-level {
   margin: 15px 0;
-  padding: 5px 10px;
+  padding: 2px 10px;
   display: inline-block;
   color: #000;
-}
-
-.y12 {
-  background-color: yellow;
-}
-
-.y6 {
-  background-color: #5a98c0;
+  font-weight: 900;
 }
 
 #landing {
@@ -166,6 +161,7 @@
 .showing-list {
   text-align: center;
   margin-bottom: 20px;
+  position: relative;
 }
 .showing-list a > div {
   padding-right: 10px;
@@ -182,6 +178,26 @@
 .showing-list .movie-level {
   margin-right: 10px;
 }
+.showing-list .state {
+  position: absolute;
+  top: 15px;
+  padding: 5px 10px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  font-weight: bolder;
+}
+.showing-list .state.recommand {
+  background-color: #73C044;
+  background-color: rgba(115, 192, 68, 0.8);
+}
+.showing-list .state.newin {
+  background-color: #DD362B;
+  background-color: rgba(221, 54, 43, 0.8);
+}
+.showing-list .state.hottest {
+  background-color: #F3C833;
+  background-color: rgba(243, 200, 51, 0.8);
+}
 
 .onlinebook .select-box {
   padding-right: 40px;
@@ -197,7 +213,7 @@
 }
 .onlinebook .select-box select {
   width: 100%;
-  height: 70px;
+  height: 60px;
   border-radius: 5px;
   padding: 0 10px;
   background-color: transparent;
@@ -216,33 +232,36 @@
   }
 }
 
-.lastestnew .news-box > a {
+.lastestnew .news-box {
+  width: 100%;
+}
+.lastestnew .news-box a {
+  width: 100%;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 20px;
 }
 @media all and (max-width: 768px) {
-  .lastestnew .news-box > a {
+  .lastestnew .news-box a {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
 }
+.lastestnew .news-box img {
+  width: 40%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
 .lastestnew .news-box .new-info {
+  max-width: 60%;
+  width: 60%;
   margin-left: 20px;
   text-align: left;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 @media all and (max-width: 768px) {
   .lastestnew .news-box .new-info {
@@ -254,12 +273,16 @@
   width: 60px;
   margin-left: 0;
   height: 1px;
-  background-color: #b9373c;
+  background-color: #C53932;
   border: none;
   margin-bottom: 15px;
 }
 .lastestnew .news-box p {
+  width: 100%;
   margin-bottom: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .movie-item:first-of-type {
@@ -276,7 +299,7 @@
 }
 .movie-item .up-date {
   margin: 10px 0 30px 0;
-  color: #b9373c;
+  color: #C53932;
   font-weight: bold;
 }
 .movie-item .movie-level {
