--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,30 +1,27 @@
-@use "variables" as v;
+@use "variables"as v;
 
 //share
 .movie-title {
-  margin-top: 10px;
+  margin-top: 15px;
   font-weight: bold;
+  width: 100%;
 
   span {
-    font-weight: 500;
+    font-weight:lighter;
     display: block;
+    color: v.$font-secondary;
   }
 }
 
 .movie-level {
   margin: 15px 0;
-  padding: 5px 10px;
+  padding: 2px 10px;
   display: inline-block;
-  color: #000;
+  color: v.$secondary;
+  font-weight: 900;
 }
 
-.y12 {
-  background-color: yellow;
-}
 
-.y6 {
-  background-color: #5a98c0;
-}
 
 //landing for index
 #landing {
@@ -56,9 +53,11 @@
     @include v.pad-width {
       font-size: 6rem;
     }
+
     @include v.phone-width {
       font-size: 3rem;
     }
+
     @include v.mini-width {
       font-size: 2rem;
     }
@@ -123,10 +122,11 @@
         position: absolute;
         top: 13px;
         left: 14px;
+
         // animation: scroll 1.3s ease-in infinite;
         @include v.pad-width {
           left: 12px;
-        } 
+        }
 
         @include v.phone-width {
           left: 11px;
@@ -140,16 +140,16 @@
 .start-scroll {
   #landing {
     .landing-page {
-      transform:translate3d(0,-100%,0);
+      transform: translate3d(0, -100%, 0);
       opacity: 0;
-      transition: transform 1s cubic-bezier(.87,-0.01,.68,.85) 0.3s,opacity 0.5s linear 1.2s;
+      transition: transform 1s cubic-bezier(.87, -0.01, .68, .85) 0.3s, opacity 0.5s linear 1.2s;
       transform-origin: top center;
     }
 
     h1,
     .welcome {
       opacity: 0;
-      transition: opacity .5s cubic-bezier(.87,-0.01,.68,.85);
+      transition: opacity .5s cubic-bezier(.87, -0.01, .68, .85);
     }
   }
 
@@ -163,13 +163,15 @@
 .showing-list {
   text-align: center;
   margin-bottom: 20px;
+  position: relative;
 
   a {
-    > div {
+    >div {
       padding-right: 10px;
+
       @include v.mini-width {
-      padding-right: 0;
-    }
+        padding-right: 0;
+      }
     }
   }
 
@@ -179,8 +181,30 @@
       width: 100%;
     }
   }
+
   .movie-level {
     margin-right: 10px;
+  }
+
+  .state {
+    position: absolute;
+    top: 15px;
+    padding: 5px 10px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    font-weight: bolder;
+
+    &.recommand {
+      @include v.bg-opacity(v.$green-bg-color, 0.8)
+    }
+
+    &.newin {
+      @include v.bg-opacity(v.$red-bg-color, 0.8)
+    }
+
+    &.hottest {
+      @include v.bg-opacity(v.$yellow-bg-color, 0.8)
+    }
   }
 }
 
@@ -196,20 +220,21 @@
 
     select {
       width: 100%;
-      height: 70px;
+      height: 60px;
       border-radius: 5px;
       padding: 0 10px;
       background-color: transparent;
       color: v.$font-primary;
-      border: 1px solid v.$white;
+      border: 1px solid v.$font-secondary;
       margin-left: 10px;
 
       option {
         background-color: v.$bg-color;
         color: v.$font-primary;
-        border: 1px solid v.$white;
+        border: 1px solid v.$font-secondary;
       }
     }
+
     @include v.phone-width {
       padding-right: 0;
     }
@@ -218,7 +243,10 @@
 
 .lastestnew {
   .news-box {
-    & > a {
+    width: 100%;
+    a {
+      width: 100%;
+      position: relative;
       display: flex;
       margin-bottom: 20px;
 
@@ -226,13 +254,13 @@
         flex-direction: column;
       }
     }
-
+    img{width:40%; height:fit-content;}
     .new-info {
+      max-width:60%;
+      width: 60%;
       margin-left: 20px;
       text-align: left;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+
 
       @include v.phone-width {
         margin-left: 0px;
@@ -250,7 +278,11 @@
     }
 
     p {
+      width: 100%;
       margin-bottom: 15px;
+      overflow: hidden;
+      text-overflow: ellipsis; 
+      white-space: nowrap; 
     }
   }
 }
@@ -291,7 +323,7 @@
   }
 
   .list-item {
-    > div {
+    >div {
       font-weight: bold;
       margin-bottom: 10px;
 
@@ -319,6 +351,7 @@
   padding: 2rem;
   text-align: center;
   margin-top: 50px;
+
   @include v.phone-width {
     padding: 10px;
   }
