--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,9 +1,5 @@
-@use "variables"as v;
+@use "variables" as v;
 
-.carousel{
-  position: relative;
-  min-height: 740px;
-}
 //share
 .movie-title {
   margin-top: 15px;
@@ -11,7 +7,7 @@
   width: 100%;
 
   span {
-    font-weight:lighter;
+    font-weight: lighter;
     display: block;
     color: v.$font-secondary;
   }
@@ -24,8 +20,6 @@
   color: v.$secondary;
   font-weight: 900;
 }
-
-
 
 //landing for index
 #landing {
@@ -146,14 +140,15 @@
     .landing-page {
       transform: translate3d(0, -100%, 0);
       opacity: 0;
-      transition: transform 1s cubic-bezier(.87, -0.01, .68, .85) 0.3s, opacity 0.5s linear 1.2s;
+      transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s,
+        opacity 0.5s linear 1.2s;
       transform-origin: top center;
     }
 
     h1,
     .welcome {
       opacity: 0;
-      transition: opacity .5s cubic-bezier(.87, -0.01, .68, .85);
+      transition: opacity 0.5s cubic-bezier(0.87, -0.01, 0.68, 0.85);
     }
   }
 
@@ -170,7 +165,7 @@
   position: relative;
 
   a {
-    >div {
+    > div {
       padding-right: 10px;
 
       @include v.mini-width {
@@ -199,15 +194,15 @@
     font-weight: bolder;
 
     &.recommand {
-      @include v.bg-opacity(v.$green-bg-color, 0.8)
+      @include v.bg-opacity(v.$green-bg-color, 0.8);
     }
 
     &.newin {
-      @include v.bg-opacity(v.$red-bg-color, 0.8)
+      @include v.bg-opacity(v.$red-bg-color, 0.8);
     }
 
     &.hottest {
-      @include v.bg-opacity(v.$yellow-bg-color, 0.8)
+      @include v.bg-opacity(v.$yellow-bg-color, 0.8);
     }
   }
 }
@@ -221,12 +216,12 @@
       align-items: center;
       margin-bottom: 30px;
     }
-
+    .material-icons{color: v.$primary;}
     select {
       width: 100%;
       height: 60px;
       border-radius: 5px;
-      padding: 0 10px;
+      padding: 0 15px;
       background-color: transparent;
       color: v.$font-primary;
       border: 1px solid v.$font-secondary;
@@ -258,13 +253,15 @@
         flex-direction: column;
       }
     }
-    img{width:40%; height:fit-content;}
+    img {
+      width: 40%;
+      height: fit-content;
+    }
     .new-info {
-      max-width:60%;
+      max-width: 60%;
       width: 60%;
       margin-left: 20px;
       text-align: left;
-
 
       @include v.phone-width {
         margin-left: 0px;
@@ -285,8 +282,8 @@
       width: 100%;
       margin-bottom: 15px;
       overflow: hidden;
-      text-overflow: ellipsis; 
-      white-space: nowrap; 
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
@@ -327,7 +324,7 @@
   }
 
   .list-item {
-    >div {
+    > div {
       font-weight: bold;
       margin-bottom: 10px;
 
