--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,7 +7,7 @@
   width: 100%;
 
   span {
-    font-weight: lighter;
+    @extend %weight300;
     display: block;
     color: v.$font-secondary;
   }
@@ -18,7 +18,7 @@
   padding: 2px 10px;
   display: inline-block;
   color: v.$secondary;
-  font-weight: 900;
+  @extend %weight400;
 }
 
 //landing for index
@@ -191,7 +191,7 @@
     padding: 5px 10px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    font-weight: bolder;
+    @extend %weight400;
 
     &.recommand {
       @include v.bg-opacity(v.$green-bg-color, 0.8);
@@ -209,14 +209,14 @@
 
 .onlinebook {
   .select-box {
-    padding-right: 40px;
+    padding-right: 7vw;
 
     div {
       display: flex;
       align-items: center;
       margin-bottom: 30px;
     }
-    .material-icons{color: v.$primary;}
+    .material-icons{color: v.$primary;font-size: 30px;}
     select {
       width: 100%;
       height: 60px;
@@ -261,6 +261,7 @@
       max-width: 60%;
       width: 60%;
       margin-left: 20px;
+      padding-right: 15px;
       text-align: left;
 
       @include v.phone-width {
@@ -305,7 +306,7 @@
   .up-date {
     margin: 10px 0 30px 0;
     color: v.$primary;
-    font-weight: bold;
+    @extend %weight300;
   }
 
   .movie-level {
@@ -314,22 +315,26 @@
 
   .book-btn {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 5px 20px;
     background-color: #5a98c0;
     border-radius: 5px;
     margin-bottom: 30px;
-    color: #000;
+    color: v.$font-primary;
     cursor: pointer;
-    font-weight: bold;
+    @extend %weight400;
+    .material-icons{
+      margin-right: 10px;
+    }
   }
 
   .list-item {
     > div {
-      font-weight: bold;
       margin-bottom: 10px;
+      @extend %weight400;
 
+      
       span {
-        font-weight: normal;
+        @extend %weight300;
         border-left: 1px solid #fff;
         padding-left: 10px;
         margin-left: 10px;
@@ -345,6 +350,10 @@
       }
     }
   }
+}
+.introduction{
+  line-height: 1.8;
+  @extend %weight300;
 }
 
 .trailer {
