--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,7 @@
+.section-box .main-title div:nth-of-type(2) {
+  font-weight: 400;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 * {
   -webkit-box-sizing: border-box;
@@ -73,11 +77,6 @@ abbr[title] {
   text-decoration: underline;
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
-}
-
-b,
-strong {
-  font-weight: bolder;
 }
 
 code,
@@ -954,11 +953,7 @@ footer > div a img.ig {
 }
 
 .l-font {
-  font-size: 1.2rem;
-}
-
-.thin-weight {
-  font-weight: 100;
+  font-size: 1.4rem;
 }
 
 .material-icons {
